--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.form{
+.login-form{
   position:absolute;
   width: 500px;
   left: 100px;
@@ -7,4 +7,20 @@
 
 .friends-btn{
   cursor: pointer;
+}
+
+#events{
+  cursor: pointer;
+}
+
+.edit-form{
+  right: 50px;
+  top: 30px;
+}
+
+.create-event{
+  position: relative;
+  width: 600px;
+  left: 50px;
+  top:30px;
 }
